URL repository, service and controller with tests
